--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -81,3 +81,19 @@ $prefix:'flow-login';
     }
 }
 
+.ant-carousel .slick-list {
+    margin: 25px 50px;
+}
+
+.ant-carousel .slick-slide {
+    text-align: center;
+    // height: 160px;
+    // line-height: 160px;
+    background: #011529;
+    overflow: hidden;
+}
+  
+.ant-carousel .slick-slide h3 {
+    color: #fff;
+}
+
