--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -1,10 +1,265 @@
-.login-form {
-    margin: 200px auto;
-    max-width: 300px;
-}
-.login-form-forgot {
-    float: right;
-}
-.login-form-button {
-    width: 100%;
-}
+ /* .login-form {
+     margin: 200px auto;
+     max-width: 300px;
+ }
+ .login-form-forgot {
+     float: right;
+ }
+ .login-form-button {
+     width: 100%;
+ } */
+
+ /* @import url(https://fonts.googleapis.com/css?family=Source+Sans+Pro:200,300); */
+
+ * {
+   box-sizing: border-box;
+   margin: 0;
+   padding: 0;
+   font-weight: 300;
+ }
+
+ body {
+   /* font-family: 'Source Sans Pro', sans-serif; */
+   /* background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/slider-2.jpg');
+   background-size: cover;
+   overflow: auto; */
+   color: white;
+   font-weight: 300;
+ }
+
+ .wallpaper {
+   background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/slider-2.jpg');
+   background-size: cover;
+   overflow: auto;
+   width: 100%;
+   height: 100%;
+ }
+
+ body ::-webkit-input-placeholder {
+   /* WebKit browsers */
+   /* font-family: 'Source Sans Pro', sans-serif !important; */
+   color: white !important;
+   font-weight: 300 !important;
+ }
+
+ body :-moz-placeholder {
+   /* Mozilla Firefox 4 to 18 */
+   /* font-family: 'Source Sans Pro', sans-serif !important; */
+   color: white !important;
+   opacity: 1 !important;
+   font-weight: 300 !important;
+ }
+
+ body ::-moz-placeholder {
+   /* Mozilla Firefox 19+ */
+   /* font-family: 'Source Sans Pro', sans-serif; */
+   color: white !important;
+   opacity: 1 !important;
+   font-weight: 300 !important;
+ }
+
+ body :-ms-input-placeholder {
+   /* Internet Explorer 10+ */
+   /* font-family: 'Source Sans Pro', sans-serif; */
+   color: white !important;
+   font-weight: 300 !important;
+ }
+
+ .wrapper {
+   background: #50a3a2;
+   background: -webkit-linear-gradient(top left, rgba(50, 65, 167, 0.5) 0%, rgba(83, 227, 166, 0.5) 100%);
+   background: -moz-linear-gradient(top left, rgba(50, 65, 167, 0.5) 0%, rgba(83, 227, 166, 0.5) 100%);
+   background: -o-linear-gradient(top left, rgba(50, 65, 167, 0.5) 0%, rgba(83, 227, 166, 0.5) 100%);
+   background: linear-gradient(to bottom right, rgba(50, 65, 167, 0.5) 0%, rgba(83, 227, 166, 0.5) 100%);
+   position: absolute;
+   top: 50%;
+   left: 0;
+   width: 50%;
+   height: 500px;
+   overflow: hidden;
+   margin: -250px 25%;
+   border-radius: 10px;
+   box-shadow: 0px 5px 11px 1px #00000063;
+ }
+
+ .wrapper.form-success .container h1 {
+   transform: translateY(85px);
+ }
+
+ .container {
+   max-width: 600px;
+   margin: 0 auto;
+   padding: 80px 0;
+   height: 400px;
+   text-align: center;
+ }
+
+ .container h1 {
+   color: white;
+   font-size: 40px;
+   transition-duration: 1s;
+   transition-timing-function: ease-in-put;
+   font-weight: bold;
+ }
+
+ form {
+   padding: 20px 0;
+   position: relative;
+   z-index: 2;
+ }
+
+ form input {
+   appearance: none !important;
+   outline: 0 !important;
+   border: 1px solid rgba(255, 255, 255, 0.4) !important;
+   background-color: rgba(255, 255, 255, 0.2) !important;
+   width: 250px !important;
+   border-radius: 3px !important;
+   padding: 10px 15px !important;
+   margin: 0 auto 10px auto !important;
+   display: block !important;
+   text-align: center !important;
+   font-size: 18px !important;
+   color: white !important;
+   transition-duration: 0.25s !important;
+   font-weight: 300 !important;
+   height: 50px !important;
+ }
+
+ form input:hover {
+   background-color: rgba(255, 255, 255, 0.4) !important;
+ }
+
+ form input:focus {
+   background-color: white !important;
+   width: 300px !important;
+   color: #53e3a6 !important;
+ }
+
+ form button {
+   appearance: none;
+   outline: 0;
+   background-color: white;
+   border: 0;
+   padding: 10px 15px;
+   color: #53e3a6;
+   border-radius: 3px;
+   width: 250px;
+   cursor: pointer;
+   font-size: 18px;
+   transition-duration: 0.25s;
+   height: 50px !important;
+ }
+
+ form button:hover {
+   background-color: #f5f7f9;
+ }
+
+ .bg-bubbles {
+   position: absolute;
+   top: 0;
+   left: 0;
+   width: 100%;
+   height: 100%;
+   z-index: 1;
+ }
+
+ .bg-bubbles li {
+   position: absolute;
+   list-style: none;
+   display: block;
+   width: 40px;
+   height: 40px;
+   background-color: rgba(255, 255, 255, 0.15);
+   bottom: -160px;
+   -webkit-animation: square 25s infinite;
+   animation: square 25s infinite;
+   -webkit-transition-timing-function: linear;
+   transition-timing-function: linear;
+ }
+
+ .bg-bubbles li:nth-child(1) {
+   left: 10%;
+ }
+
+ .bg-bubbles li:nth-child(2) {
+   left: 20%;
+   width: 80px;
+   height: 80px;
+   animation-delay: 2s;
+   animation-duration: 17s;
+ }
+
+ .bg-bubbles li:nth-child(3) {
+   left: 25%;
+   animation-delay: 4s;
+ }
+
+ .bg-bubbles li:nth-child(4) {
+   left: 40%;
+   width: 60px;
+   height: 60px;
+   animation-duration: 22s;
+   background-color: rgba(255, 255, 255, 0.25);
+ }
+
+ .bg-bubbles li:nth-child(5) {
+   left: 70%;
+ }
+
+ .bg-bubbles li:nth-child(6) {
+   left: 80%;
+   width: 120px;
+   height: 120px;
+   animation-delay: 3s;
+   background-color: rgba(255, 255, 255, 0.2);
+ }
+
+ .bg-bubbles li:nth-child(7) {
+   left: 32%;
+   width: 160px;
+   height: 160px;
+   animation-delay: 7s;
+ }
+
+ .bg-bubbles li:nth-child(8) {
+   left: 55%;
+   width: 20px;
+   height: 20px;
+   animation-delay: 15s;
+   animation-duration: 40s;
+ }
+
+ .bg-bubbles li:nth-child(9) {
+   left: 25%;
+   width: 10px;
+   height: 10px;
+   animation-delay: 2s;
+   animation-duration: 40s;
+   background-color: rgba(255, 255, 255, 0.3);
+ }
+
+ .bg-bubbles li:nth-child(10) {
+   left: 90%;
+   width: 160px;
+   height: 160px;
+   animation-delay: 11s;
+ }
+
+ @-webkit-keyframes square {
+   0% {
+     transform: translateY(0);
+   }
+   100% {
+     transform: translateY(-700px) rotate(600deg);
+   }
+ }
+
+ @keyframes square {
+   0% {
+     transform: translateY(0);
+   }
+   100% {
+     transform: translateY(-700px) rotate(600deg);
+   }
+ }
