--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -102,13 +102,13 @@
    font-weight: bold;
  }
 
- form {
+ .container form {
    padding: 20px 0;
    position: relative;
    z-index: 2;
  }
 
- form input {
+ .container form input {
    appearance: none !important;
    outline: 0 !important;
    border: 1px solid rgba(255, 255, 255, 0.4) !important;
@@ -126,33 +126,29 @@
    height: 50px !important;
  }
 
- form input:hover {
+ .container form input:hover {
    background-color: rgba(255, 255, 255, 0.4) !important;
  }
 
- form input:focus {
+ .container form input:focus {
    background-color: white !important;
    width: 300px !important;
-   color: #53e3a6 !important;
+   color: #5385e3 !important;
  }
 
- form button {
+ .container form button {
    appearance: none;
    outline: 0;
-   background-color: white;
+   /* background-color: white; */
    border: 0;
    padding: 10px 15px;
-   color: #53e3a6;
+   /* color: #53e3a6; */
    border-radius: 3px;
    width: 250px;
    cursor: pointer;
    font-size: 18px;
    transition-duration: 0.25s;
    height: 50px !important;
- }
-
- form button:hover {
-   background-color: #f5f7f9;
  }
 
  .bg-bubbles {
