--- a/src/pages/layout/layout.scss
+++ b/src/pages/layout/layout.scss
@@ -121,3 +121,15 @@
 .ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab-active {
     color: #02417c !important;
 }
+
+.ant-tabs-extra-content{
+    display: none;
+}
+
+.ant-tabs-bar {
+    background: #001529;
+}
+
+.ant-menu-item.hide {
+    display: none;
+}
