--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -28,8 +28,10 @@
  }
 
  .wallpaper {
-   background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/slider-2.jpg');
+   /* background-image: url('https://s3-us-west-2.amazonaws.com/s.cdpn.io/142996/slider-2.jpg'); */
+   background-image: url('./images/bg2.jpg');
    background-size: cover;
+   background-position: center;
    overflow: auto;
    width: 100%;
    height: 100%;
