--- a/src/pages/layout/layout.scss
+++ b/src/pages/layout/layout.scss
@@ -7,7 +7,7 @@
         color: white;
         background: #011529;
         span:nth-of-type(1) {
-            margin-left: 10px;
+            // margin-left: 10px;
         }
         span:nth-of-type(2) {
             float: right;
@@ -16,7 +16,7 @@
                 cursor: pointer;
             }
             span {
-                margin-right: 30px;
+                margin-right: 25px;
                 cursor: pointer;
             }
         }
