--- a/src/pages/layout/layout.scss
+++ b/src/pages/layout/layout.scss
@@ -121,11 +121,17 @@
     background: #eeeeee;
     /* color: white; */
     border: 1px solid #ffffff;
+    padding: 0 40px 0 40px;
 }
 
 .ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab-active {
-    color: #02417c !important;
+    color: #0061b9 !important;
     background: #ffffff;
+}
+
+.ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab-active div {
+    font-weight: bold;
+    letter-spacing: 5px;
 }
 
 .ant-tabs-extra-content{
@@ -142,4 +148,15 @@
 
 .ant-dropdown{
     top: 60px !important;
+}
+
+.ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab .ant-tabs-close-x {
+    width: 16px;
+    height: 16px;
+    height: 16px;
+    margin-right: -5px;
+    margin-left: 3px;
+    position: absolute;
+    right: 14px;
+    top: 12px;
 }
