--- a/src/pages/layout/layout.scss
+++ b/src/pages/layout/layout.scss
@@ -122,11 +122,14 @@
     /* color: white; */
     border: 1px solid #ffffff;
     padding: 0 40px 0 40px;
+    box-shadow: inset 0px -15px 0px #e9e9e9c4;
+    margin-right: 4px;
 }
 
 .ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab-active {
     color: #0061b9 !important;
     background: #ffffff;
+    box-shadow: none;
 }
 
 .ant-tabs.ant-tabs-card .ant-tabs-card-bar .ant-tabs-tab-active div {
@@ -159,4 +162,8 @@
     position: absolute;
     right: 14px;
     top: 12px;
+}
+
+.ant-tabs.ant-tabs-card .ant-tabs-card-content > .ant-tabs-tabpane, .ant-tabs.ant-tabs-editable-card .ant-tabs-card-content > .ant-tabs-tabpane{
+    padding: 0 10px;
 }
