content-wrap style

--- a/src/pages/layout/layout.scss
+++ b/src/pages/layout/layout.scss
@@ -167,3 +167,7 @@
 .ant-tabs.ant-tabs-card .ant-tabs-card-content > .ant-tabs-tabpane, .ant-tabs.ant-tabs-editable-card .ant-tabs-card-content > .ant-tabs-tabpane{
     padding: 0 10px;
 }
+
+.content-wrap{
+    margin-top: 10px;
+}
