--- a/src/pages/layout/layout.scss
+++ b/src/pages/layout/layout.scss
@@ -1,7 +1,7 @@
-@font-face {
-    font-family: 'LOGOfont';
-    src: url('../layout/logo1.ttf');
-}
+// @font-face {
+//     font-family: 'LOGOfont';
+//     src: url('../layout/logo1.ttf');
+// }
 
 .layout {
     height: 100%;
