--- a/src/pages/layout/layout.scss
+++ b/src/pages/layout/layout.scss
@@ -227,22 +227,22 @@
     padding-right: 5px !important;
 }
 
-.ant-card { 
-    .ant-card-head {
-        .ant-card-head-title {
-            font-size: 15px;
-            font-weight: 400;
-            padding: 10px !important;
-        }
-        min-height: 28px;
-        padding: 0px; 
-    }
-    .ant-card-body {
-        padding: 24px;
-        min-height: 60px !important;
-        p {
-            margin-bottom: 0;
-        }
-    }
-    margin-bottom: 10px !important;
-}
+// .ant-card { 
+//     .ant-card-head {
+//         .ant-card-head-title {
+//             font-size: 15px;
+//             font-weight: 400;
+//             padding: 10px !important;
+//         }
+//         min-height: 28px;
+//         padding: 0px; 
+//     }
+//     .ant-card-body {
+//         padding: 24px;
+//         min-height: 60px !important;
+//         p {
+//             margin-bottom: 0;
+//         }
+//     }
+//     margin-bottom: 10px !important;
+// }
