--- a/src/pages/layout/layout.scss
+++ b/src/pages/layout/layout.scss
@@ -32,6 +32,20 @@
         position: relative;
         height: calc(100% - 70px);
         .nav-content {
+            button{
+                position: absolute;
+                bottom: 15px;
+                left: 50%;
+                margin: 0 0 0 -10px;
+                color: #59646d;
+                background-color: #000204;
+                border-color: #000914;
+                padding: 0;
+                font-size: 18px;
+            }
+            button:hover{
+                color: #fff;
+            }
             position: absolute;
             width: 150px;
             height: 100%;
