--- a/src/pages/layout/layout.scss
+++ b/src/pages/layout/layout.scss
@@ -260,3 +260,13 @@
 //     }
 //     margin-bottom: 10px !important;
 // }
+
+.download-table-xls-button{
+    // color: #fff;
+    // background-color: #1890ff;
+    // border-color: #1890ff;
+    // text-shadow: 0 -1px 0 rgba(0, 0, 0, 0.12);
+    // -webkit-box-shadow: 0 2px 0 rgba(0, 0, 0, 0.045);
+    // box-shadow: 0 2px 0 rgba(0, 0, 0, 0.045);
+    float: right;
+}
