shitload of changes

--- a/src/pages/layout/layout.scss
+++ b/src/pages/layout/layout.scss
@@ -3,6 +3,17 @@
 //     src: url('../layout/logo1.ttf');
 // }
 
+html {
+    overflow-x: hidden;
+    overflow-y: auto;
+}
+
+body {
+    width: 100vw;
+    overflow: hidden;
+    padding-left: calc(100vw - 100%);
+}
+
 .layout {
     height: 100%;
     .header {
