--- a/src/pages/layout/layout.scss
+++ b/src/pages/layout/layout.scss
@@ -68,7 +68,7 @@ body {
             background: -o-linear-gradient(bottom , #00152a 0%, #00152a 30%, #000913 75%, #000000 100%);
             background: linear-gradient(to bottom, #00152a 0%, #00152a 30%, #000913 75%, #000000 100%);
             a {
-                color: #fff;
+                color: rgba(255, 255, 255, 0.65);
             }
         }
         .page-content {
@@ -78,6 +78,18 @@ body {
             -webkit-box-sizing: border-box;
             -moz-box-sizing: border-box;
             box-sizing: border-box;
+        }
+    }
+}
+
+.layout {
+    .content {
+        .nav-content {
+            .ant-menu-item:hover{
+                a {
+                    color: white;
+                }
+            }
         }
     }
 }
