--- a/src/pages/login/Login.css
+++ b/src/pages/login/Login.css
@@ -194,7 +194,8 @@
    display: block;
    width: 40px;
    height: 40px;
-   background-color: rgba(255, 255, 255, 0.15);
+   border-radius: 30px;
+   background-color: rgba(255, 255, 255, 0.1);
    bottom: -160px;
    -webkit-animation: square 25s infinite;
    animation: square 25s infinite;
