--- a/src/pages/layout/layout.scss
+++ b/src/pages/layout/layout.scss
@@ -76,10 +76,26 @@ body {
                 }
             }
         }
+        .footer{
+            position: absolute;
+            width: 100%;
+            height: 40px;
+            bottom: 0;
+            padding-left: 150px;
+            font-size: 14px;
+            background: #fafafabb;
+            background: #000000;
+            // border-top: 1px solid #e8e8e85c;
+            color: #59646d;
+            text-align: center;
+            line-height: 40px;
+            z-index: -1;
+        }
         .page-content {
             width: 100%;
             height: 100%;
             padding-left: 150px;
+            padding-bottom: 40px;
             -webkit-box-sizing: border-box;
             -moz-box-sizing: border-box;
             box-sizing: border-box;
