--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -89,14 +89,14 @@ $prefix:'flow-login';
     text-align: center;
     // height: 160px;
     // line-height: 160px;
-    // background: #00152a;
+    // background: #001529;
     overflow: hidden;
 
-    background: #00152a;
-    background: -webkit-linear-gradient(bottom , #00152a 0%, #000913 75%, #000000 100%);
-    background: -moz-linear-gradient(bottom , #00152a 0%, #000913 75%, #000000 100%);
-    background: -o-linear-gradient(bottom , #00152a 0%, #000913 75%, #000000 100%);
-    background: linear-gradient(to bottom, #00152a 0%, #000913 75%, #000000 100%);
+    background: #001529;
+    background: -webkit-linear-gradient(bottom , #001529 0%, #000913 75%, #000000 100%);
+    background: -moz-linear-gradient(bottom , #001529 0%, #000913 75%, #000000 100%);
+    background: -o-linear-gradient(bottom , #001529 0%, #000913 75%, #000000 100%);
+    background: linear-gradient(to bottom, #001529 0%, #000913 75%, #000000 100%);
 }
   
 .ant-carousel .slick-slide h3 {
