--- a/src/pages/layout/layout.scss
+++ b/src/pages/layout/layout.scss
@@ -90,6 +90,7 @@ body {
             text-align: center;
             line-height: 40px;
             z-index: -1;
+            letter-spacing: 1px;
         }
         .page-content {
             width: 100%;
