--- a/src/pages/layout/layout.scss
+++ b/src/pages/layout/layout.scss
@@ -168,8 +168,8 @@ body {
       top: 0;
       bottom: 0;
       z-index: 9998;
-      background: rgb(255, 255, 255);
-      opacity: 0.1;
+      background: #000000;
+      opacity: 0.2;
     }
   }
   
