--- a/src/pages/layout/layout.scss
+++ b/src/pages/layout/layout.scss
@@ -168,8 +168,7 @@ body {
       top: 0;
       bottom: 0;
       z-index: 9998;
-      background: #000000;
-      opacity: 0.2;
+      background: rgba(0, 0, 0, 0.45);
     }
   }
   
