--- a/src/pages/layout/layout.scss
+++ b/src/pages/layout/layout.scss
@@ -93,6 +93,9 @@ body {
             z-index: 2;
             letter-spacing: 1px;
         }
+        .footer:hover{
+            color: #fff;
+        }
         .page-content {
             width: 100%;
             height: 100%;
